[package]
name = "lnurl-rs"
version = "0.2.6"
edition = "2018"
authors = ["Ben Carman <benthecarman@live.com>"]
license = "MIT"
homepage = "https://github.com/benthecarman/lnurl-rs/"
repository = "https://github.com/benthecarman/lnurl-rs/"
readme = "README.md"
documentation = "https://docs.rs/lnurl-rs/"
description = "A basic LNURL implementation in Rust"
keywords = ["lightning", "bitcoin", "lnurl"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lnurl"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
bech32 = "0.9"
bitcoin = { version = "0.29", default-features = false, features = ["serde"] }
email_address = "0.2"
lightning-invoice = { version = "0.24", default-features = false, features = ["serde"] }
reqwest = { version = "0.11", optional = true, default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.5", features = ["json"], optional = true }
url = "2.3"

[dev-dependencies]
tokio = { version = "1.20", features = ["full"] }
bitcoin = { version = "0.29", features = ["serde", "std"] }
lightning-invoice = { version = "0.24", features = ["std", "serde"] }
nostr = { version = "=0.22.0-bitcoin-v0.29", default-features = false }
# zip versions after 0.6.3 don't work with our MSRV 1.57.0
zip = "=0.6.3"
# base64ct versions at 1.6.0 and higher have MSRV 1.60.0
base64ct = "<1.6.0"

[features]
default = ["std", "blocking", "async", "async-https"]
std = ["bitcoin/std", "lightning-invoice/std"]
blocking = ["ureq", "ureq/socks"]
async = ["reqwest", "reqwest/socks"]
async-https = ["reqwest/default-tls", "async"]
